<resources xmlns:android="http://schemas.android.com/apk/res/android">
<string name="accept_location">Record Location</string>
<string name="accuracy">Accuracy</string>
<string name="activity_not_found">No activity found to handle: %s</string>
<string name="add_another">Add Group</string>
<string name="add_another_repeat">Add another \"%s\" group?</string>
<string name="add_repeat">Add a new \"%s\" group?</string>
<string name="add_repeat_no">Do Not Add</string>
<string name="advance">forward to\nnext\nprompt</string>
<string name="altitude">Altitude</string>
<string name="app_name">GC Mobile</string>
<string name="audio_file_error">No audio file was specified.</string>
<string name="audio_file_invalid">File: %s is not a valid audio file.</string>
<string name="backup">back to\nprevious\nprompt</string>
<string name="barcode_scanner_error">Sorry, Barcode Scanner is not installed!</string>
<string name="cancel">Cancel</string>
<string name="cancel_loading_form">Cancel</string>
<string name="cancel_location">Cancel</string>
<string name="cancel_saving_form">Cancel</string>
<string name="capture_audio">Record Sound</string>
<string name="capture_image">Take Picture</string>
<string name="capture_video">Record Video</string>
<string name="change_language">Change Language</string>
<string name="change_password">Password</string>
<string name="change_server_url">Server URL</string>
<string name="change_username">ODK Username</string>
<string name="clearanswer_confirm">Remove the response to \"%s\"?</string>
<string name="clear_answer">Remove response</string>
<string name="clear_answer_ask">Remove This Response?</string>
<string name="clear_answer_no">Cancel</string>
<string name="completed_data">Complete (%s)</string>
<string name="data">Saved Forms</string>
<string name="data_saved_error">Sorry, form save failed!</string>
<string name="data_saved_ok">Form successfully saved!</string>
<string name="default_completed">Default to Completed</string>
<string name="default_completed_summary">Mark form as completed by default</string>
<string name="default_server_url">https://opendatakit.appspot.com</string>
<string name="delete_confirm">Delete %s form(s)?</string>
<string name="delete_file">Delete Selected</string>
<string name="delete_no">Do Not Delete</string>
<string name="delete_repeat">Remove group</string>
<string name="delete_repeat_ask">Remove This Group?</string>
<string name="delete_repeat_confirm">Remove group \"%s\" and all of its sub-groups?</string>
<string name="delete_repeat_no">Cancel</string>
<string name="delete_yes">Delete Forms</string>
<string name="discard_answer">Remove response</string>
<string name="discard_group">Remove group</string>
<string name="download">Get Selected</string>
<string name="download_forms_result">Download Result</string>
<string name="downloading_data">Connecting to Server</string>
<string name="download_all_successful">All forms downloaded successfully.</string>
<string name="download_complete">Form Get Complete</string>
<string name="download_failed_with_error">Form \"%1$s\" failed. %2$s.</string>
<string name="do_not_change">Cancel</string>
<string name="do_not_exit">Cancel</string>
<string name="do_not_save">Ignore Changes</string>
<string name="enter">start</string>
<string name="entering_repeat">Add Group</string>
<string name="entering_repeat_ask">Add New Group?</string>
<string name="enter_data">Fill Blank Form</string>
<string name="enter_data_button">Fill Blank Form</string>
<string name="enter_data_description">You are at the start of \"%s\". Swipe the screen as shown below to begin.</string>
<string name="enter_data_message">To navigate, swipe your finger horizontally on the screen as if turning pages in a book. Press the Menu button for more choices.</string>
<string name="error_downloading">Error Getting Form</string>
<string name="error_occured">Error Occurred</string>
<string name="fetching_file">Getting %1$s.\n\nForm %2$s of %3$s form(s).</string>
<string name="file_deleted_error">Sorry, %1$s of %2$s selected form(s) failed to delete!</string>
<string name="file_deleted_ok">%s form(s) successfully deleted!</string>
<string name="file_invalid">File: %s is invalid.</string>
<string name="file_missing">File: %s is missing.</string>
<string name="finished_disk_scan">Finished scanning. All forms loaded.</string>
<string name="form">Form</string>
<string name="forms">Blank Forms</string>
<string name="form_renamed">%1$s was renamed %2$s.</string>
<string name="getting_location">Loading Location</string>
<string name="get_barcode">Get Barcode</string>
<string name="get_forms">Get Blank Form</string>
<string name="get_location">Record Location</string>
<string name="provider_disabled_error">Sorry, Location providers are disabled!</string>
<string name="invalid_answer_error">Sorry, this response is invalid!</string>
<string name="jump_to_beginning">Go To Start</string>
<string name="jump_to_end">Go To End</string>
<string name="jump_to_previous">Go Up</string>
<string name="latitude">Latitude</string>
<string name="leave_repeat_yes">Do Not Add</string>
<string name="leaving_repeat">Add Group</string>
<string name="leaving_repeat_ask">And One More Group?</string>
<string name="list_failed_with_error">Form listing failed. %s.</string>
<string name="loading_form">Loading Form</string>
<string name="load_remote_form_error">Error Getting Form List</string>
<string name="location_provider_accuracy">Using %1$s. Accuracy is %2$s m.</string>
<string name="location_provider">Using %1$s provider. Please wait for greater accuracy.</string>
<string name="location_accuracy">Accuracy is %1$s m</string>
<string name="longitude">Longitude</string>
<string name="main_menu">Main Menu</string>
<string name="main_menu_details">Data collection made easier&#8230;</string>
<string name="main_menu_message">GC Mobile v1.3.0</string>
<string name="manage_files">Delete Saved Form</string>
<string name="mark_finished">Mark form as completed</string>
<string name="no">No</string>
<string name="noselect_error">Sorry, you have not selected any forms!</string>
<string name="no_capture">Nothing recorded yet.</string>
<string name="no_connection">No network connection available</string>
<string name="no_items_display">Nothing available to display.</string>
<string name="no_items_display_forms">Nothing available to display.\n\nTry getting and filling out a blank form.</string>
<string name="no_items_display_instances">Nothing available to display.\n\nTry finalizing saved forms before sending.</string>
<string name="no_items_error">Nothing available to %s!</string>
<string name="no_sd_error">Sorry, your memory card is not working!</string>
<string name="ok">OK</string>
<string name="one_capture">Multimedia recorded.</string>
<string name="parse_error">Sorry, unable to parse form.</string>
<string name="parse_legacy_formlist_failed">The server has not provided an available-forms document compatible with Aggregate 0.9.x. : %s</string>
<string name="parse_openrosa_formlist_failed">The server has not provided an available-forms document compatible with the OpenRosa version 1.0 standard: %s</string>
<string name="password">Password</string>
<string name="play_audio">Play Sound</string>
<string name="play_video">Play Video</string>
<string name="please_wait">Please wait a few moments.</string>
<string name="please_wait_long">Please wait. This could take a few minutes.</string>
<string name="quit_application">Exit %s</string>
<string name="quit_entry">Save Form and Exit</string>
<string name="refresh">Refresh</string>
<string name="replace_audio">Replace Sound</string>
<string name="replace_barcode">Rescan Barcode</string>
<string name="replace_image">Replace Picture</string>
<string name="replace_location">Replace Location</string>
<string name="replace_video">Replace Video</string>
<string name="required_answer_error">Sorry, this response is required!</string>
<string name="click_to_web">Tap to visit http://groupcomplete.com</string>
	<string name="tf_account_details">If you do not know these details you can have a reminder sent to the account owner.</string>
	<string name="tf_account_key_label">License Key</string>
	<string name="tf_account_number_label">Licence Number</string>
	<string name="tf_add_form_field">Add Field</string>
	<string name="tf_audio_media_type">Audio recording</string>
	<string name="tf_choose_group_type">Choose group type</string>
	<string name="tf_choose_group_type_hint">- Regular groups are used to organize related questions under a common label\n\n- Repeated groups loop through the questions that they contain up to a maximum number of loops\n\n- If \"display on one screen\" is selected, all of the fields that this group contains will be shown on a single screen vs. the default format of one question per screen</string>
	<string name="tf_choose_media_type">Choose media type</string>
	<string name="tf_choose_media_type_hint">Select the media type that this field should support.</string>
	<string name="tf_choose_number_type">Choose number type</string>
	<string name="tf_choose_number_type_hint">Select the number type that this field should support.</string>
	<string name="tf_choose_one">Choose one</string>
    <string name="tf_connection_settings">Connection settings</string>
	<string name="tf_decimal_number_type">Integers and decimals</string>
	<string name="tf_element_barcode">Barcode reader</string>
	<string name="tf_element_date">Date &amp; time</string>
	<string name="tf_element_geopoint">Geopoint field</string>
	<string name="tf_element_group">Group of fields</string>
	<string name="tf_element_media">Media field</string>
	<string name="tf_element_number">Number field</string>
	<string name="tf_element_select">Select from list</string>
	<string name="tf_element_text">Text field</string>
	<string name="tf_fbel_default">Default value</string>
	<string name="tf_fbel_default_hint">Any value supplied here will be shown in the input area of the field and will be saved as-is unless otherwise changed by the user.</string>
	<string name="tf_fbel_hint">Description</string>
	<string name="tf_fbel_hint_hint">You may provide longer instructions or a hint to help the user understand how to use this field.</string>
	<string name="tf_fbel_label">Label</string>
	<string name="tf_fbel_label_hint">The name, prompt or question for this field.</string>
	<string name="tf_fbel_readonly">Read-only</string>
	<string name="tf_fbel_readonly_hint">Read-only fields will be visible to the user but they will not be able to modify them directly. The values of read-only fields may be manipulated by advanced properties.</string>
	<string name="tf_fbel_required">Required</string>
	<string name="tf_fbel_required_hint">Require the user to respond to this field before marking the form as complete.</string>
	<string name="tf_image_media_type">Photograph</string>
	<string name="tf_integer_number_type">Integers only</string>
	<string name="tf_item_default">Selected by default</string>
	<string name="tf_item_default_hint">Preselect item when list is displayed.</string>
	<string name="tf_item_label">Label</string>
	<string name="tf_item_label_hint">Item as displayed for selection.</string>
	<string name="tf_item_value">Value/Key</string>
	<string name="tf_item_value_hint">Value stored when item is selected.</string>
	<string name="tf_regular_group_type">Regular group of fields</string>
	<string name="tf_repeated_group_type">Repeated group of fields</string>
    <string name="tf_search_by_assignment_prompt">Display forms assigned to&#8230;</string>
    <string name="tf_search_by_status_prompt">Display forms with&#8230;</string>
    <string name="tf_search_filter_by_assignment">Filter By Assignment</string>
    <string name="tf_search_filter_by_status">Filter By Status</string>
	<string name="tf_synchronization_settings">Synchronization settings</string>
	<string name="tf_video_media_type">Video recording</string>
	<string name="tf_view_instance">View Output</string>
</resources>