<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/tf_search_filter_by_status"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/filterByStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/tf_search_by_status_prompt" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/tf_search_filter_by_assignment"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/filterByAssignment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/tf_search_by_assignment_prompt" />
</LinearLayout>