<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip">
    
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/header"
        android:background="@drawable/border"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/headerType"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="Example" />
        
        <ImageView
            android:id="@+id/headerIcon"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/element_group" />        
    </RelativeLayout>
    
    <TextView
        android:id="@android:id/empty"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:paddingTop="14dp"
        android:text="@string/tf_fbel_label" />
    
    <EditText
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@android:id/empty"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"                    
        android:text="@string/tf_fbel_label_hint" />
    
    <!-- Hint -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/hintInput"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">   
        
        <TextView
            android:id="@android:id/empty"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingTop="10dp"
            android:text="@string/tf_fbel_hint" />
    
        <EditText
            android:id="@+id/hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    
        <TextView
            android:id="@android:id/empty"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"                    
            android:text="@string/tf_fbel_hint_hint" />
    </LinearLayout>
        
    <!-- Group type selection -->
    <RelativeLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/groupFieldTypeSelection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        
        <TextView
            android:id="@+id/groupTypeLabel"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingTop="10dp"
            android:text="@string/tf_choose_group_type" />
        
        <RadioGroup
            android:id="@+id/groupRadioSelection"
            android:layout_below="@id/groupTypeLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <RadioButton 
                android:id="@+id/groupTypeRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tf_regular_group_type" />
                
            <RadioButton 
                android:id="@+id/groupTypeRepeated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tf_repeated_group_type" />            
        </RadioGroup>
        
        <TextView
            android:id="@android:id/empty"
            android:inputType="textMultiLine"
            android:layout_below="@id/groupRadioSelection"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"                    
            android:text="@string/tf_choose_group_type_hint" />    
    </RelativeLayout>     
        
    <!-- Media type selection -->
    <RelativeLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mediaFieldTypeSelection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        
        <TextView
            android:id="@+id/mediaTypeLabel"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingTop="10dp"
            android:text="@string/tf_choose_media_type" />
        
        <RadioGroup
            android:id="@+id/mediaRadioSelection"
            android:layout_below="@id/mediaTypeLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <RadioButton 
                android:id="@+id/mediaTypeAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tf_audio_media_type" />
                
            <RadioButton 
                android:id="@+id/mediaTypeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tf_image_media_type" />
                
            <RadioButton 
                android:id="@+id/mediaTypeVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tf_video_media_type" />                
        </RadioGroup>
        
        <TextView
            android:id="@android:id/empty"
            android:inputType="textMultiLine"
            android:layout_below="@id/mediaRadioSelection"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"                    
            android:text="@string/tf_choose_media_type_hint" />    
    </RelativeLayout>            
    
    <!-- Number type selection -->
    <RelativeLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/numberFieldTypeSelection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        
        <TextView
            android:id="@+id/numberTypeLabel"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingTop="10dp"
            android:text="@string/tf_choose_number_type" />
        
        <RadioGroup
            android:id="@+id/numberRadioSelection"
            android:layout_below="@id/numberTypeLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <RadioButton 
                android:id="@+id/numberTypeInteger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tf_integer_number_type" />
                
            <RadioButton 
                android:id="@+id/numberTypeDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tf_decimal_number_type" />
        </RadioGroup>
        
        <TextView
            android:id="@android:id/empty"
            android:inputType="textMultiLine"
            android:layout_below="@id/numberRadioSelection"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"                    
            android:text="@string/tf_choose_number_type_hint" />    
    </RelativeLayout>
    
    <!-- Select type -->
    <RelativeLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/selectFieldTypeSelection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        
        <TextView
            android:id="@+id/selectTypeLabel"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingTop="10dp"
            android:text="@string/tf_choose_select_type" />
        
        <RadioGroup
            android:id="@+id/selectRadioSelection"
            android:layout_below="@id/selectTypeLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">            

            <RadioButton 
                android:id="@+id/selectTypeSingle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tf_select_single_type" /> 
                                
            <RadioButton 
                android:id="@+id/selectTypeMultiple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tf_select_multiple_type" />    
        </RadioGroup>
        
        <TextView
            android:id="@android:id/empty"
            android:inputType="textMultiLine"
            android:layout_below="@id/selectRadioSelection"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"                    
            android:text="@string/tf_choose_select_type_hint" />    
    </RelativeLayout>
    
    <!-- Default value -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/defaultValueInput"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">    
    
        <TextView
            android:id="@android:id/empty"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingTop="10dp"
            android:text="@string/tf_fbel_default" />
    
        <EditText
            android:id="@+id/defaultValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />    
    
        <TextView
            android:id="@android:id/empty"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"                    
            android:text="@string/tf_fbel_default_hint" />        
    </LinearLayout>
    
    <!-- Read-only option -->
    <RelativeLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/readonlyLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        
        <CheckBox             
            android:id="@+id/readonly"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" 
            android:layout_width="wrap_content" 
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="top" />

        <TextView
            android:id="@+id/fbel_readonly"
            android:textSize="20sp"            
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/readonly"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/tf_fbel_readonly" />
                
        <TextView
            android:id="@android:id/empty"
            android:inputType="textMultiLine"            
            android:layout_toRightOf="@id/readonly"
            android:layout_below="@id/fbel_readonly"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"                    
            android:text="@string/tf_fbel_readonly_hint" />
    </RelativeLayout>
    
    <!-- Required option -->
    <RelativeLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/requiredLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        
        <CheckBox             
            android:id="@+id/required"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" 
            android:layout_width="wrap_content" 
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="top" />

        <TextView
            android:id="@+id/fbel_required"
            android:textSize="20sp"            
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/required"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/tf_fbel_required" />
                
        <TextView
            android:id="@android:id/empty"
            android:inputType="textMultiLine"            
            android:layout_toRightOf="@id/required"
            android:layout_below="@id/fbel_required"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"                    
            android:text="@string/tf_fbel_required_hint" />
    </RelativeLayout>    
</LinearLayout>

</ScrollView>
