<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip">
    
    <TextView
        android:id="@android:id/empty"  
        android:text="@string/tf_account_number_label"        
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/accountNumber" 
        android:inputType="phone"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:maxLength="14" 
        android:text="" />        
       
    <TextView
        android:id="@android:id/empty"  
        android:text="@string/tf_account_key_label"        
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:paddingTop="10dp" 
        android:textSize="20sp" />

    <EditText         
        android:id="@+id/accountKey"
        android:inputType="text|textCapCharacters|textNoSuggestions"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:maxLength="14"
        android:text="" />        
        
    <TextView
        android:id="@android:id/empty"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"      
        android:paddingTop="10dp"               
        android:text="@string/tf_account_details" />       
</LinearLayout>
